test_regress/t/t_strength_strong1_strong1_bad.out
%Error: t/t_strength_strong1_strong1_bad.v:8:19: syntax error, unexpected strong1
    8 |    wire (strong1, strong1) a = 1;
      |                   ^~~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
